# voxels

./: .gitignore  CMakeLists.txt  README.md  actor.cpp  actor.hpp  demo.cpp  deps.txt  game.cpp  makefile  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shaderprogram.cpp  shaderprogram.hpp  shaderset.cpp  shaderset.hpp  voxel.cpp  voxel.hpp
include/lobor/: framebuffer.hpp  light.hpp  lobor.hpp  model.hpp  scene.hpp  texmodel.hpp  texture.hpp  texturepeek.hpp  window.hpp
models/: tree-top.mtl  tree-trunk.mtl  unicorn.mtl
models/blender/: tree.blend  tree.blend1  unicorn.blend  unicorn.blend1
shaders/: fragment.glsl  vertex.glsl
shaders/flat/: fragment.glsl  vertex.glsl
shaders/shadows/: depth_f.glsl  depth_v.glsl  fragment.glsl  vertex.glsl
shaders/texturepeek/: fsh.glsl  vsh.glsl
shaders/zval/: fragment.glsl  vertex.glsl
src/: demo.cpp  framebuffer.cpp  ifrit.cpp  ifrit.hpp  light.cpp  lobor.cpp  lobor.hpp  model.cpp  scene.cpp  shader.cpp  texmodel.cpp  texture.cpp  texture.hpp  texturepeek.cpp  window.cpp
src/core/: framebuffer.cpp  framebuffer.hpp  light.cpp  light.hpp  model.cpp  model.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  texmodel.cpp  texmodel.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
